--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^2.7.12",
     "eslint-config-prettier": "^8.7.0",
+    "mapbox-gl": "^2.15.0",
     "next": "^13.2.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
