--- a/package.json
+++ b/package.json
@@ -1,69 +1,27 @@
 {
-  "name": "ts-next-tailwind-template",
-  "version": "0.5.0",
-  "private": "true",
-  "description": "Customizable Front-End Template",
-  "packageManager": "pnpm@7.9.5",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint --ext=jsx,ts,tsx .",
-    "lint:fix": "eslint --ext=jsx,ts,tsx . --fix",
-    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
-    "prepare": "husky install"
-  },
+  "name": "basic",
+  "version": "0.1.0",
   "dependencies": {
-    "@mapbox/mapbox-gl-directions": "github:mapbox/mapbox-gl-directions",
-    "@types/mapbox-gl": "^2.7.12",
-    "eslint-config-prettier": "^8.7.0",
-    "mapbox-gl": "^2.15.0",
+    "@mapbox/mapbox-gl-directions": "4.1.0",
+    "@mapbox/polyline": "^1.2.0",
+    "@vitejs/plugin-react": "^4.0.4",
+    "events": "^3.3.0",
+    "html2canvas": "^1.4.1",
+    "mapbox-gl": "2.6.1",
     "mapbox-gl-controls": "^2.3.5",
-    "next": "^13.2.4",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-use": "^17.4.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "vite": "^4.4.8",
+    "vite-plugin-svgr": "^3.2.0"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^18.15.0",
-    "@types/react": "^18.0.28",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.35.0",
-    "eslint-config-next": "13.2.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.0",
-    "mapbox-gl-directions": "link:@types/@mapbox/mapbox-gl-directions",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5"
+    "react-scripts": "latest"
   },
-  "lint-staged": {
-    "*.tsx,*.ts,*.mdx": [
-      "eslint --fix"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "author": {
-    "email": "crisemcr@gmail.com",
-    "name": "Cristian Crețu",
-    "url": "https://cretu.dev"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cristicretu/ts-next-tailwind-template/issues"
-  },
-  "homepage": "https://template.cretu.dev",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -75,12 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "keywords": [
-    "tailwindcss",
-    "template",
-    "radix",
-    "react",
-    "nextjs"
-  ]
+  }
 }
